changed background color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
 </head>
 <!-- Top image -->
-<body class="bg-image">
+<body class="bg-info">
    
 
     <div class="jumbotron jumbotron-fluid bg-dark">
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Hangman game starts -->
-    <div class="container text-center">
+    <div class="container text-center text-light">
         
         <div class="col-sm-12">
             <h2>Press any key to get started!</h2>
